--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile 'com.lsjwzh:materialloadingprogressbar:0.5.8-RELEASE'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.google.android.gms:play-services-ads:11.0.1'
+    compile project(':library')
+
+
 }
